--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/style.css">
-    <title>Ellen He</title>
+	<link rel="stylesheet" href="/style.css">
+	<title>Ellen He</title>
 </head>
 <body>
-    <header><a href = "https://davidtstran.github.io" style = "color:rgb(46, 46, 46); margin-right:30px;">Home</a>
+	<header>
 	    Ellen He
 	</header>
 	
 	<br> 
 	
 	<h1>Paintings </h1>
+	
 	<div style = "text-align: center; margin: 0 auto; width: 50%">
 		
 	</div>
