--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<h1>Paintings </h1>
 	
 	<div style = "text-align: center; margin: 0 auto; width: 50%">
-		
+		<img src="/images/bamboo.jpg">
 	</div>
 	 
 </body>
