--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	
 	<div style = "text-align: center; margin: 0 auto; width: 50%">
 		<img src="/images/bamboo.jpg">
+		<img src="/images/bamboo2.jpg">
+		<img src="/images/bouquet.jpg">
+		<img src="/images/lillies.jpg">
 	</div>
 	 
 </body>
