--- a/index.html
+++ b/index.html
@@ -14,24 +14,42 @@
 	<h1>Paintings </h1>
 	
 	<div style = "text-align: center; margin: 0 auto; width: 50%">
-		<img src="/images/bamboo.jpg">
-		<img src="/images/lillies.jpg">
-		<img src="/images/bouquet.jpg">
-		<img src="/images/bamboo2.jpg">
-		<img src="/images/branch.jpg">
-		<img src="/images/cliff.jpg">
-		<img src="/images/cliff2.jpg">
-		<img src="/images/flower.jpg">
-		<img src="/images/flower2.jpg">
-		<img src="/images/insect.jpg">
-		<img src="/images/lillies2.jpg">
-		<img src="/images/man.jpg">
-		<img src="/images/mountain.jpg">
-		<img src="/images/mountain2.jpg">
-		<img src="/images/petals.jpg">
-		<img src="/images/plum.jpg">
-		<img src="/images/town.jpg">
-		<img src="/images/water.jpg">
+		<a href="https://ellenpainter.github.io/images/bamboo.jpg">
+			<img src="/images/bamboo.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/lillies.jpg">
+			<img src="/images/lillies.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/bouquet.jpg">
+			<img src="/images/bouquet.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/bamboo2.jpg">
+			<img src="/images/bamboo2.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/branch.jpg">
+			<img src="/images/branch.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/cliff.jpg">
+			<img src="/images/cliff.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/cliff2.jpg">
+			<img src="/images/cliff2.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/flower.jpg">
+			<img src="/images/flower.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/flower2.jpg">
+			<img src="/images/flower2.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/insect.jpg">
+			<img src="/images/insect.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/lillies2.jpg">
+			<img src="/images/lillies2.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/man.jpg">
+			<img src="/images/man.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/mountain.jpg">
+			<img src="/images/mountain.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/mountain2.jpg">
+			<img src="/images/mountain2.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/petals.jpg">
+			<img src="/images/petals.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/plum.jpg">
+			<img src="/images/plum.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/town.jpg">
+			<img src="/images/town.jpg"> </a>
+		<a href="https://ellenpainter.github.io/images/water.jpg">
+			<img src="/images/water.jpg"> </a>
 	</div>
 	 
 </body>
