--- a/index.html
+++ b/index.html
@@ -3,21 +3,6 @@
 <head>
 	<link rel="stylesheet" href="/style.css">
 	<title>Ellen He</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script>
-	var folder = "/images/";
-
-	$.ajax({
-    	url : folder,
-    	success: function (data) {
-        	$(data).find("a").attr("href", function (i, val) {
-            		if( val.match(/\.(jpe?g|png|gif)$/) ) { 
-                		$(".gallery").append( "<img src='"+ folder + val +"'>" );
-            		} 
-        	});
-    	}
-	});
-	</script>
 </head>
 <body>
 	<header>
@@ -28,7 +13,7 @@
 	
 	<h1>Paintings </h1>
 	
-	<div style = "text-align: center; margin: 0 auto; width: 50%" class = "gallery">
+	<div style = "text-align: center; margin: 0 auto; width: 100%">
 		<a href="https://ellenpainter.github.io/images/bamboo.jpg">
 			<img src="/images/bamboo.jpg"> </a>
 		<a href="https://ellenpainter.github.io/images/lillies.jpg">
