--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<br> 
 	
-	<h1>Paintings </h1>
+	<h1 style="color:white;"> Paintings </h1>
 	
 	<div style = "text-align: center; margin: 0 auto; width: 100%">
 		<a href="https://ellenpainter.github.io/images/bamboo.jpg">
