--- a/index.html
+++ b/index.html
@@ -5,19 +5,15 @@
 	<title>Ellen He</title>
 </head>
 <body>
-	<header>
-		<a href = "https://ellenpainter.github.io/"> Ellen He </a>
-	</header>
+	<header> Ellen He </header>
 	
 	<br> 
 	
 	<h1 style="color:white;"> Paintings </h1>
 	
 	<div style = "text-align: center; margin: 0 auto; width: 50%">
-		<h2> Size </h2>
 		<a href="https://ellenpainter.github.io/images/bamboo.jpg">
 			<img src="/images/bamboo.jpg"> </a>
-		<h2> Description </h2>
 		
 		<a href="https://ellenpainter.github.io/images/lillies.jpg">
 			<img src="/images/lillies.jpg"> </a>
