--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<br> 
 	
-	<h1 style="color:white;"> Paintings </h1>
+	<h2 style="color:white;"> Introduction </h2>
 	
 	<div style = "text-align: center; margin: 0 auto; width: 50%">
 		<a href="https://ellenpainter.github.io/images/bamboo.jpg">
