--- a/index.html
+++ b/index.html
@@ -96,32 +96,32 @@
   <!-- Full-width images with number text -->
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
-      <img src="img_woods_wide.jpg" style="width:100%">
+      <img src="/images/bamboo.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">2 / 6</div>
-      <img src="img_5terre_wide.jpg" style="width:100%">
+      <img src="/images/lillies.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">3 / 6</div>
-      <img src="img_mountains_wide.jpg" style="width:100%">
+      <img src="/images/bouquet.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">4 / 6</div>
-      <img src="img_lights_wide.jpg" style="width:100%">
+      <img src="/images/bamboo2.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">5 / 6</div>
-      <img src="img_nature_wide.jpg" style="width:100%">
+      <img src="/images/cliff.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">6 / 6</div>
-      <img src="img_snow_wide.jpg" style="width:100%">
+      <img src="/images/flower.jpg" style="width:100%">
   </div>
 
   <!-- Next and previous buttons -->
