--- a/index.html
+++ b/index.html
@@ -1,159 +1,73 @@
+<!DOCTYPE html>
 <html>
 <head>
-<style>
-	* {
-  box-sizing: border-box;
-}
-
-/* Position the image container (needed to position the left and right arrows) */
-.container {
-  position: relative;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Add a pointer when hovering over the thumbnail images */
-.cursor {
-  cursor: pointer;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 40%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* Container for image text */
-.caption-container {
-  text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  color: white;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Six columns side by side */
-.column {
-  float: left;
-  width: 16.66%;
-}
-
-/* Add a transparency effect for thumnbail images */
-.demo {
-  opacity: 0.6;
-}
-
-.active,
-.demo:hover {
-  opacity: 1;
-}
-	</style>
-	</head>
+	<link rel="stylesheet" href="/style.css">
+	<title>Ellen He</title>
+</head>
 <body>
-<!-- Container for the image gallery -->
-<div class="container">
+	<header> Ellen He </header>
+	
+	<br> 
+	
+	<h1 style="color:white;"> Introduction </h1>
+	
+	<div style = "text-align: center; margin: 0 auto; width: 50%">
+		<a href="https://ellenpainter.github.io/images/bamboo.jpg">
+			<img src="/images/bamboo.jpg"> </a> <!-- 1600 x 3390 -->
+		
+		<a href="https://ellenpainter.github.io/images/bamboo2.jpg">
+			<img src="/images/bamboo2.jpg"> </a> <!-- 1078 x 1618 -->
+		
+		<a href="https://ellenpainter.github.io/images/bouquet.jpg">
+			<img src="/images/bouquet.jpg"> </a> <!-- 1913 x 3893 -->
+		
+		<a href="https://ellenpainter.github.io/images/branch.jpg">
+			<img src="/images/branch.jpg"> </a> <!-- 2027 x 2046 -->
+		
+		<a href="https://ellenpainter.github.io/images/cliff.jpg">
+			<img src="/images/cliff.jpg"> </a> <!-- 1698 x 3569 -->
+		
+		<a href="https://ellenpainter.github.io/images/cliff2.jpg">
+			<img src="/images/cliff2.jpg"> </a> <!-- 4032 x 3024 -->
+		
+		<a href="https://ellenpainter.github.io/images/flower.jpg">
+			<img src="/images/flower.jpg"> </a> <!-- 2484 x 2432 -->
+		
+		<a href="https://ellenpainter.github.io/images/flower2.jpg">
+			<img src="/images/flower2.jpg"> </a> <!-- 2325 x 3955 -->
+		
+		<a href="https://ellenpainter.github.io/images/insect.jpg">
+			<img src="/images/insect.jpg"> </a> <!-- 1618 x 1078 -->
+			
+		<a href="https://ellenpainter.github.io/images/lillies.jpg">
+			<img src="/images/lillies.jpg"> </a> <!-- 1928 x 3520 -->
+			
+		<a href="https://ellenpainter.github.io/images/lillies2.jpg">
+			<img src="/images/lillies2.jpg"> </a> <!-- 2572 x 2678 -->
+		
+		<a href="https://ellenpainter.github.io/images/man.jpg">
+			<img src="/images/man.jpg"> </a> <!-- 3024 x 4032 -->
+		
+		<a href="https://ellenpainter.github.io/images/mountain.jpg">
+			<img src="/images/mountain.jpg"> </a> <!-- 747 x 341 -->
+		
+		<a href="https://ellenpainter.github.io/images/mountain2.jpg">
+			<img src="/images/mountain2.jpg"> </a> <!-- 1600 x 1604 -->
+		
+		<a href="https://ellenpainter.github.io/images/petals.jpg">
+			<img src="/images/petals.jpg"> </a> <!-- 1954 x 3848 -->
+		
+		<a href="https://ellenpainter.github.io/images/plum.jpg">
+			<img src="/images/plum.jpg"> </a> <!-- 1078 x 2012 -->
+		
+		<a href="https://ellenpainter.github.io/images/town.jpg">
+			<img src="/images/town.jpg"> </a> <!-- 4032 x 2132 -->
+		
+		<a href="https://ellenpainter.github.io/images/water.jpg">
+			<img src="/images/water.jpg"> </a> <!-- 2048 x 2040 -->
+	</div>
+	 
+</body>
+</html>
 
-  <!-- Full-width images with number text -->
-  <div class="mySlides">
-    <div class="numbertext">1 / 6</div>
-      <img src="/images/bamboo.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">2 / 6</div>
-      <img src="/images/lillies.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">3 / 6</div>
-      <img src="/images/bouquet.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">4 / 6</div>
-      <img src="/images/bamboo2.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">5 / 6</div>
-      <img src="/images/cliff.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">6 / 6</div>
-      <img src="/images/flower.jpg" style="width:100%">
-  </div>
-
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-  <!-- Image text -->
-  <div class="caption-container">
-    <p id="caption"></p>
-  </div>
-
-  <!-- Thumbnail images -->
-  <div class="row">
-    <div class="column">
-      <img class="demo cursor" src="/images/bamboo.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="/images/lillies.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="/images/bouquet.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="/images/bamboo2.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="/images/cliff.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="/images/flower.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
-    </div>
-  </div>
-</div>
-	</body>
-</html
+<!-- comment -->
