--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 	<link rel="stylesheet" href="/style.css">
 	<title>Ellen He</title>
+	<style>
+		.zoom { width:400px; height:400px; object-fit:cover; display: inline-block; transition: transform .1s; }
+		.zoom:hover { width:100%; height:100%; }
+	</style>
+	
 </head>
 <body>
 	<header> Ellen He </header>
@@ -13,7 +18,7 @@
 	
 	<div style = "text-align: center; margin: 0 auto; width: 100%">
 		<a href="https://ellenpainter.github.io/images/bamboo.jpg">
-			<img src="/images/bamboo.jpg"> </a> <!-- 1600 x 3390 -->
+			<div class="zoom" src="/images/bamboo.jpg"> <div> </a> <!-- 1600 x 3390 -->
 		
 		<a href="https://ellenpainter.github.io/images/bamboo2.jpg">
 			<img src="/images/bamboo2.jpg"> </a> <!-- 1078 x 1618 -->
