--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" href="/style.css">
 	<title>Ellen He</title>
+	<base target="_blank">
 </head>
 <body>
 	<header> Ellen He </header>
