--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 		<a href="https://ellenpainter.github.io/images/flower2.jpg">
 			<img src="/images/flower2.jpg"> </a> <!-- 2325 x 3955 -->
 		
+		<a href="https://ellenpainter.github.io/images/flower3.jpg">
+			<img src="/images/flower3.jpg"> </a>
+		
+		<a href="https://ellenpainter.github.io/images/flower4.jpg">
+			<img src="/images/flower4.jpg"> </a>
+		
 		<a href="https://ellenpainter.github.io/images/insect.jpg">
 			<img src="/images/insect.jpg"> </a> <!-- 1618 x 1078 -->
 			
