--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 			<img src="/images/flower2.jpg"> </a> <!-- 2325 x 3955 -->
 		
 		<a href="https://ellenpainter.github.io/images/flower3.jpg">
-			<img src="/images/flower3.jpg"> </a>
+			<img src="/images/flower3.jpg"> </a> <!-- 2736 x 2764 -->
 		
 		<a href="https://ellenpainter.github.io/images/flower4.jpg">
-			<img src="/images/flower4.jpg"> </a>
+			<img src="/images/flower4.jpg"> </a> <!-- 2048 x 1627 -->
 		
 		<a href="https://ellenpainter.github.io/images/insect.jpg">
 			<img src="/images/insect.jpg"> </a> <!-- 1618 x 1078 -->
