--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" href="/style.css">
 	<title>Ellen He</title>
-	<script src="jquery-3.4.1.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
 	<header> Ellen He </header>
