--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 	<h1 style="color:white;"> Introduction </h1>
 	
-	<div style = "text-align: center; margin: 0 auto; width: 100%">
+	<div class="popup-gallery" style = "text-align: center; margin: 0 auto; width: 100%">
 		<a href="https://ellenpainter.github.io/images/bamboo.jpg" title="Bamboo">
 			<img src="/images/bamboo.jpg"> </a> <!-- 1600 x 3390 -->
 		
