--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 				      "town", "water"];
 			for (i = 0; i < images.length; i++) {
 				document.getElementById("gallery").innerHTML += 
-					"<a href = 'https://ellenpainter.github.io/images/" + images[i] + ".jpg' title='" + images[i] "'> <img src='/images/" + images[i] + ".jpg'> </a>"
+					"<a href = 'https://ellenpainter.github.io/images/" + images[i] + ".jpg' title='" + images[i] + "'> <img src='/images/" + images[i] + ".jpg'> </a>"
 			}
 		}
 	</script>
 </head>
-<body onload="loadImages()">
+<body onload="loadImages();">
 	<header> Ellen He </header>
 	
 	<br> 
