--- a/slideshow.html
+++ b/slideshow.html
@@ -3,7 +3,6 @@
 <head>
 	<link rel="stylesheet" href="/style.css">
 	<title>Ellen He</title>
-	<script src="https://www.w3schools.com/lib/w3.js"></script>
 	
 	<script>
 		function loadImages() {
@@ -14,10 +13,9 @@
 			for (i = 0; i < images.length; i++) {
 				document.getElementById("gallery").innerHTML += 
 					"<a href = 'https://ellenpainter.github.io/images/" + images[i] 
-					+ ".jpg' title='" + images[i] + "'> <img class='painting' src='/images/" + images[i] + ".jpg'> </a>"
+					+ ".jpg' title='" + images[i] + "'> <img src='/images/" + images[i] + ".jpg'> </a>"
 			}
 		}
-		myShow = w3.slideshow(".painting", 0);
 	</script>
 </head>
 <body onload="loadImages();">
@@ -30,9 +28,6 @@
 	<div style="text-align:center; margin:0 auto; width:100%" id="gallery">
 		
 	</div>
-	
-	<button onclick="myShow.previous()">Previous</button>
-	<button onclick="myShow.next()">Next</button>
 	
 </body>
 </html>
