--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="/style.css">
+	<link rel="stylesheet" href="photoswipe/photoswipe.css"> 
+	<link rel="stylesheet" href="photoswipe/default-skin/default-skin.css"> 
+	<script src="photoswipe/photoswipe.min.js"></script> 
+	<script src="photoswipe/photoswipe-ui-default.min.js"></script>
 	<title>Ellen He</title>
 	
 	<script>
