--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 
 		// build items array
 		var items = [
-		{
-			src: '/images/bamboo.jpg'
-		},
-		{
-			src: '/images/bamboo2.jpg'
-		}
+    		{
+        		src: 'https://placekitten.com/600/400',
+        		w: 600,
+        		h: 400
+    		},
+    		{
+        		src: 'https://placekitten.com/1200/900',
+        		w: 1200,
+        		h: 900
+    		}
 		];
 
 		// define options (if needed)
