--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         'photoswipe/photoswipe-ui-default.js' 
 		], function( PhotoSwipe, PhotoSwipeUI_Default ) {
 
-			var gallery = new PhotoSwipe( someElement, PhotoSwipeUI_Default 
+			var gallery = new PhotoSwipe( pswpElement, PhotoSwipeUI_Default, items, options); 
 			gallery.init() 
 
 		});
