--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="photoswipe/photoswipe.css"> 
-	<link rel="stylesheet" href="photoswipe/default-skin/default-skin.css"> 
-	<script src="photoswipe/photoswipe.min.js"></script> 
-	<script src="photoswipe/photoswipe-ui-default.min.js"></script> 
+	<link rel="stylesheet" href="/photoswipe/photoswipe.css"> 
+	<link rel="stylesheet" href="/photoswipe/default-skin/default-skin.css"> 
+	<script src="/photoswipe/photoswipe.min.js"></script> 
+	<script src="/photoswipe/photoswipe-ui-default.min.js"></script> 
+	<script src="/require.js"></script>
 	
 	<title>Ellen He</title>
 	
@@ -34,8 +35,8 @@
 
 		// Initializes and opens PhotoSwipe
 		require([ 
-        'photoswipe/photoswipe.js', 
-        'photoswipe/photoswipe-ui-default.js' 
+        '/photoswipe/photoswipe.js', 
+        '/photoswipe/photoswipe-ui-default.js' 
 		], function( PhotoSwipe, PhotoSwipeUI_Default ) {
 
 			var gallery = new PhotoSwipe( pswpElement, PhotoSwipeUI_Default, items, options); 
