--- a/index.html
+++ b/index.html
@@ -2,15 +2,27 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/photoswipe/photoswipe.css"> 
-	<link rel="stylesheet" href="/photoswipe/default-skin/default-skin.css"> 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.0/photoswipe.css"> 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.0/default-skin/default-skin.css"> 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="/photoswipe/photoswipe.min.js"></script> 
-	<script src="/photoswipe/photoswipe-ui-default.min.js"></script> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.0/photoswipe.min.js"></script> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.0/photoswipe-ui-default.min.js"></script> 
 	<script src="/require.js"></script>
 	
 	<title>Ellen He</title>
 	
+	<style>
+		body {font-family: 'Bitter', Georgia, Times, sans-serif;}
+		h1 {margin: 2em;}
+		.pswp__caption__center {text-align: center;}
+		figure {
+		display: inline-block;
+		width: 33.333%;
+		float: left;
+		}
+		img {width: 100%;}
+		.spacer {height: 5em;}
+	</style>
 	<script>
 		'use strict';
 
