--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		
 	</div>
 	
-	div class="container">
+<div class="container">
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
 
