--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				      "town", "water"];
 			for (i = 0; i < images.length; i++) {
 				document.getElementById("gallery").innerHTML += 
-					"<figure itemprop='associatedMedia' itemscope itemtype='http://schema.org/ImageObject'> 
+					"<figure itemprop='associatedMedia' itemscope itemtype='http://schema.org/ImageObject'>" 
 					+ "<a href='/images/" + images[i] + ".jpg' data-caption='' data-width='1200' data-height='900' itemprop='contentUrl'>"
 					+ "<img src='/images/" + images[i]+ ".jpg' itemprop='thumbnail' alt='Image description'> </a> </figure>";
 			}
