--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           <!-- Use figure for a more semantic html -->
           <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
             <!-- Link to the big image, not mandatory, but usefull when there is no JS -->
-            <a href="https://unsplash.it/1200/900/?image=702" data-caption="Sea side, south shore<br><em class='text-muted'>© Dominik Schröder</em>" data-width="1200" data-height="900" itemprop="contentUrl">
+            <a href="/images/bamboo.jpg" data-caption="Sea side, south shore<br><em class='text-muted'>© Dominik Schröder</em>" data-width="100%" data-height="100%" itemprop="contentUrl">
               <!-- Thumbnail -->
-              <img src="https://unsplash.it/400/300/?image=702" itemprop="thumbnail" alt="Image description">
+              <img src="/images/bamboo.jpg" itemprop="thumbnail" alt="Image description">
             </a>
           </figure>
           <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
