--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <!-- Use figure for a more semantic html -->
           <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
             <!-- Link to the big image, not mandatory, but usefull when there is no JS -->
-            <a href="/images/bamboo.jpg" data-caption="Sea side, south shore<br><em class='text-muted'>© Dominik Schröder</em>" data-width="100%" data-height="100%" itemprop="contentUrl">
+            <a href="/images/bamboo.jpg" data-caption="Sea side, south shore<br><em class='text-muted'>© Dominik Schröder</em>" data-width="1600" data-height="3390" itemprop="contentUrl">
               <!-- Thumbnail -->
               <img src="/images/bamboo.jpg" itemprop="thumbnail" alt="Image description">
             </a>
