--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
       width: 33.333%;
       float: left;
     }
-    img {width: 100%;}
+    img {
+      width: 100%;
+      height: 400px;
+      object-fit: cover;
+      display: inline-block;  
+    }
     .spacer {height: 5em;}
   </style>
   <script>
