--- a/index.html
+++ b/index.html
@@ -60,63 +60,33 @@
 	      
         <div id="gallery" class="gallery" itemscope itemtype="http://schema.org/ImageGallery">
           <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-            <a href="/images/bamboo.jpg" data-caption="Sea side, south shore<br><em class='text-muted'>© Dominik Schröder</em>" data-width="1600" data-height="3390" itemprop="contentUrl">
+            <a href="/images/bamboo.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="1600" data-height="3390" itemprop="contentUrl">
               <img src="/images/bamboo.jpg" itemprop="thumbnail" alt="Image description">
             </a>
           </figure>
           <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-            <a href="https://unsplash.it/1200/900/?image=695" data-caption="Sunset in the wheat field<br><em class='text-muted'>© Jordan McQueen</em>" data-width="1200" data-height="900" itemprop="contentUrl">
-              <img src="https://unsplash.it/400/300/?image=695" itemprop="thumbnail" alt="Image description">
+            <a href="/images/bamboo2.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="1078" data-height="1618" itemprop="contentUrl">
+              <img src="/images/bamboo2.jpg" itemprop="thumbnail" alt="Image description">
             </a>
           </figure>
-          <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-            <a href="https://unsplash.it/1200/900/?image=675" data-caption="Mysterious ocean<br><em class='text-muted'>© Barn Images</em>" data-width="1200" data-height="900" itemprop="contentUrl">
-              <img src="https://unsplash.it/400/300/?image=675" itemprop="thumbnail" alt="Image description">
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/bouquet.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="1913" data-height="3893" itemprop="contentUrl">
+              <img src="/images/bouquet.jpg" itemprop="thumbnail" alt="Image description">
             </a>
           </figure>
-          <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-            <a href="https://unsplash.it/1200/900/?image=651" data-caption="Cloud over the mountains<br><em class='text-muted'>© James Pritchett</em>" data-width="1200" data-height="900" itemprop="contentUrl">
-              <img src="https://unsplash.it/400/300/?image=651" itemprop="thumbnail" alt="Image description">
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/branch.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="2027" data-height="2046" itemprop="contentUrl">
+              <img src="/images/branch.jpg" itemprop="thumbnail" alt="Image description">
             </a>
           </figure>
-          <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-            <a href="https://unsplash.it/1200/900/?image=584" data-caption="Icelandic horses<br><em class='text-muted'>© Bethany Legg</em>" data-width="1200" data-height="900" itemprop="contentUrl">
-              <img src="https://unsplash.it/400/300/?image=584" itemprop="thumbnail" alt="Image description">
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/cliff.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="1698" data-height="3569" itemprop="contentUrl">
+              <img src="/images/cliff.jpg" itemprop="thumbnail" alt="Image description">
             </a>
           </figure>
-          <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-            <a href="https://unsplash.it/1200/900/?image=574" data-caption="Sea side, south shore<br><em class='text-muted'>© Julien Lavallée</em>" data-width="1200" data-height="900" itemprop="contentUrl">
-              <img src="https://unsplash.it/400/300/?image=574" itemprop="thumbnail" alt="Image description">
-            </a>
-          </figure>
-          <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-            <a href="https://unsplash.it/1200/900/?image=551" data-caption="Sunset on the highland road<br><em class='text-muted'>© Forrest Cavale</em>" data-width="1200" data-height="900" itemprop="contentUrl">
-              <img src="https://unsplash.it/400/300/?image=551" itemprop="thumbnail" alt="Image description">
-            </a>
-          </figure>
-          <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-            <a href="https://unsplash.it/1200/900/?image=509" data-caption="Seljalandsfoss waterfall<br><em class='text-muted'>© Jeff Sheldon</em>" data-width="1200" data-height="900" itemprop="contentUrl">
-              <img src="https://unsplash.it/400/300/?image=509" itemprop="thumbnail" alt="Image description">
-            </a>
-          </figure>
-          <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-            <a href="https://unsplash.it/1200/900/?image=511" data-caption="Fjadrarglufur canyon, south shore<br><em class='text-muted'>© Jeff Sheldon</em>" data-width="1200" data-height="900" itemprop="contentUrl">
-              <img src="https://unsplash.it/400/300/?image=511" itemprop="thumbnail" alt="Image description">
-            </a>
-          </figure>
-          <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-            <a href="https://unsplash.it/1200/900/?image=515" data-caption="Eerie wreckage of a crashed U.S. Navy aircraft<br><em class='text-muted'>© Jeff Sheldon</em>" data-width="1200" data-height="900" itemprop="contentUrl">
-              <img src="https://unsplash.it/400/300/?image=515" itemprop="thumbnail" alt="Image description">
-            </a>
-          </figure>
-          <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-            <a href="https://unsplash.it/1200/900/?image=512" data-caption="Blue Lagoon<br><em class='text-muted'>© Jeff Sheldon</em>" data-width="1200" data-height="900" itemprop="contentUrl">
-              <img src="https://unsplash.it/400/300/?image=512" itemprop="thumbnail" alt="Image description">
-            </a>
-          </figure>
-          <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-            <a href="https://unsplash.it/1200/900/?image=514" data-caption="Sunny Reykjavik street<br><em class='text-muted'>© Jeff Sheldon</em>" data-width="1200" data-height="900" itemprop="contentUrl">
-              <img src="https://unsplash.it/400/300/?image=514" itemprop="thumbnail" alt="Image description">
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/cliff2.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="4032" data-height="3024" itemprop="contentUrl">
+              <img src="/images/cliff2.jpg" itemprop="thumbnail" alt="Image description">
             </a>
           </figure>
         </div>
