--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <div class="col-sm-8 col-sm-offset-2">
         
         <h1 class="text-center">
-          Iceland<br>
-          <small><em>a PhotoSwipe Demo</em></small>
+          Paintings<br>
+          <small><em>by Ellen He</em></small>
         </h1>
 	      
         <div id="gallery" class="gallery" itemscope itemtype="http://schema.org/ImageGallery">
