--- a/index.html
+++ b/index.html
@@ -41,13 +41,9 @@
 			for (i = 0; i < images.length; i++) {
 				console.log(images[i] + " " + imgDimensions[i][0] + "," + imgDimensions[i][1]);
 				//document.getElementById("gallery").innerHTML += 
-				//	"<figure itemprop='associatedMedia' itemscope itemtype='http://schema.org/ImageObject'> 
+				//	"<figure itemprop='associatedMedia' itemscope itemtype='http://schema.org/ImageObject'>" 
 				//	+ "<a href='/images/" + images[i] + ".jpg' data-caption='' data-width='" + imgDimensions[i][0] +"' data-height='" + imgDimensions[i][1] 
 				//	+ "' itemprop='contentUrl'> <img src='/images/" + images[i]+ ".jpg' itemprop='thumbnail' alt='Image description'> </a> </figure>";
-				document.getElementById("gallery").innerHTML +=
-					"<figure itemprop='associatedMedia' itemscope itemtype='http://schema.org/ImageObject'>" +
-					"<a href='/images/bamboo.jpg' data-caption='Painting<br><em class='text-muted'>by Ellen He</em>' data-width='1600' data-height='3390' itemprop='contentUrl'>" +
-					"<img src='/images/bamboo.jpg' itemprop='thumbnail' alt='Image description'> </a> </figure>"
 			}
 		}
 </script>
